
2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
the java-lattices project, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

~ -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

2014-02-26 Jean-Francois Viaud <jviaud@univ-lr.fr>
	* src/lattice/Rule.java
		^ Check style
	* test/lattice/RuleTest.java
		+ Add unit test on Rule.java
	* build.xml

2014-02-20 Jean-Francois Viaud <jviaud@univ-lr.fr>
	* src/lattice/BijectiveComponents.java
		^ Translate "DependanceGraphe" to "DependencyGraph"
	* test/lattice/BijectiveComponentsTest.java
		+ Add unit test on BijectiveComponents.java

2014-02-20 Christophe Demko <chdemko@gmail.com>
	* src/lattice/BijectiveComponents.java:
	* examples/Examples.java:
		+ Add uml graph
		^ reformat comments
		^ rename dependance -> dependency
		^ change public setters to protected

2014-02-14 Jean-Francois Viaud <jviaud@univ-lr.fr>
	* src/lattice/BijectiveComponents.java
		+ Check style for BijectiveComponents.java

2014-02-16 Christophe Demko <chdemko@gmail.com>
	* build.xml
	* src/dgraph/package-info.java
	* src/lattice/ArrowRelation.java
	* src/lattice/BijectiveComponents.java
	* src/lattice/ConceptLattice.java
	* src/lattice/Lattice.java
	* src/lattice/package-info.java
	* test/dgraph/package-info.java
	* test/lattice/LatticeTest.java
	* test/lattice/package-info.java
		+ Check style for Lattice.java

2014-02-14 Christophe Demko <chdemko@gmail.com>
	* .travis.yml
	* build.xml
	* lib/style.xml
	* src/dgraph/DAGraph.java
	* src/dgraph/DGraph.java
	* src/dgraph/Edge.java
	* src/dgraph/Node.java
		+ Add uml schema

2014-02-14 Jean-Francois Viaud <jviaud@univ-lr.fr>
	* src/lattice/package-info.java
		+ Add file
	* src/lattice/ArrowRelation.java
		^ Checkstyle

2014-02-11 Jean-Francois Viaud <jviaud@univ-lr.fr>
	* src/lattice/ArrowRelation.java
		+ Add class