@@ -49,116 +49,14 @@ import java.util.Set;
  * ![DGraph](DGraph.png)
  *
  * @uml DGraph.png
+ * !include src/dgraph/DGraph.iuml
  *
- * DGraph "*" o-- "*" Node
- * DGraph "*" o-- "*" Edge
+ * DGraph "many" o-- "many" Node : contains
+ * DGraph "many" o-- "many" Edge : contains
  *
- * Edge "*" *-- "2" Node
+ * Edge "many" *-- "2" Node : contains
  *
- * class DGraph {
- *     -TreeSet<Node> nodes
- *     -TreeMap<Node, TreeSet<Edge>> successors
- *     -TreeMap<Node, TreeSet<Edge>> predecessors
- *
- *     +DGraph()
- *     +DGraph(final Set<Node> set)
- *     +DGraph(final DGraph graph)
- *
- *     +{static}DGraph random(int size, double threshold)
- *     +{static}DGraph random(int size)
- *
- *     +int sizeNodes()
- *     +int sizeEdges()
- *     +SortedSet<Node> getNodes()
- *     +SortedSet<Edge> getEdges()
- *     +SortedSet<Edge> getSuccessorEdges(final Node node)
- *     +SortedSet<Edge> getPredecessorEdges(final Node node)
- *     +TreeSet<Node> getSuccessorNodes(final Node node)
- *     +TreeSet<Node> getPredecessorNodes(final Node node)
- *     +Edge getEdge(final Node from, final Node to)
- *     +Node getNode(final Object search)
- *     +Node getNodeByContent(final Object content)
- *     +Node getNodeByIdentifier(int identifier)
- *     #DGraph setNodes(final TreeSet<Node> nodes)
- *     #TreeMap<Node, TreeSet<Edge>> getSuccessors()
- *     #DGraph setSuccessors(final TreeMap<Node, TreeSet<Edge>> successors)
- *     #TreeMap<Node, TreeSet<Edge>> getPredecessors()
- *     #DGraph setPredecessors(final TreeMap<Node, TreeSet<Edge>> predecessors)
- *
- *     +String toString()
- *     +void writeDot(final String filename)
- *
- *     +boolean containsNode(final Node node)
- *     +boolean addNode(final Node node)
- *     +boolean removeNode(final Node node)
- *     +boolean removeNodes(final Set<Node> nodes)
- *     +boolean containsEdge(final Node from, final Node to)
- *     +boolean containsEdge(final Edge edge)
- *     +boolean addEdge(final Node from, final Node to, final Object content)
- *     +boolean addEdge(final Node from, final Node to)
- *     +boolean addEdge(final Edge edge)
- *     +boolean removeEdge(final Node from, final Node to)
- *     +boolean removeEdge(final Edge edge)
- *
- *     +boolean isAcyclic()
- *
- *     +ArrayList<Node> topologicalSort()
- *     +TreeSet<Node> getSinks()
- *     +TreeSet<Node> getWells()
- *     +DGraph getSubgraphByNodes(final Set<Node> nodes)
- *     +DGraph getSubgraphByEdges(final Set<Edge> edges)
- *     +void complementary()
- *     +int reflexiveReduction()
- *     +int reflexiveClosure()
- *     +int transitiveClosure()
- *     +ArrayList<Node>[] depthFirstSearch(Node source, TreeSet<Node> visited, ArrayList<Node> sort)
- *     +ArrayList<Node>[] depthFirstSearch()
- *     +void transpose()
- *     +DAGraph getStronglyConnectedComponent()
- * }
- *
- * class Node {
- *      -int identifier
- *      -Object content
- *      -{static} int count = 0
- *
- *      +Node(final Object content)
- *      +Node()
- *      +Node(final Node node)
- *      +Node()
- *
- *      +int getIdentifier()
- *      +Object getContent()
- *
- *      +String toString()
- *      +String toDot()
- *
- *      +Node copy()
- *
- *      +boolean equals(final Object object)
- *      +int hashCode()
- *      +int compareTo(final Object object)
- * }
- *
- * class Edge {
- *      -Node from
- *      -Node to
- *      -Object content
- *
- *      +Edge(final Node from, final Node to, final Object content)
- *      +Edge(final Node from, final Node to)
- *
- *      +Node getFrom()
- *      +Node getTo()
- *      +Edge setContent(final Object content)
- *      +Object getContent()
- *      +boolean hasContent()
- *
- *      +String toString()
- *      +String toDot()
- *
- *      +int compareTo(final Object object)
- * }
+ * hide empty members
  */
 public class DGraph {
     /* ------------- FIELDS ------------------ */
