@@ -1,0 +1,22 @@
+class Edge {
+    -Node from
+    -Node to
+    -Object content
+	.. Constructors ..
+    +Edge(final Node from, final Node to, final Object content)
+    +Edge(final Node from, final Node to)
+	.. Accessors ..
+    +Node getFrom()
+    +Node getTo()
+    +Object getContent()
+	.. Mutators ..
+    +Edge setContent(final Object content)
+    .. Predicates ..
+    +boolean hasContent()
+	.. Transformers ..
+    +String toString()
+    +String toDot()
+	.. Comparators ..
+    +int compareTo(final Object object)
+}
+
