@@ -1,0 +1,35 @@
+class BijectiveComponents {
+    -ClosureSystem init
+    -ConceptLattice lattice
+    -Lattice reducedLattice
+    -DGraph dependencyGraph
+    -TreeSet<ComparableSet> minimalGenerators
+    -IS canonicalDirectBasis
+    -IS canonicalBasis
+    -Context table
+    .. Constructors ..
+    +BijectiveComponents(ClosureSystem init)
+    .. Initialisation ..
+    +long initialize()
+    .. Persistence ..
+    +void save(String directory, String name)
+    .. Accessors ..
+    +ClosureSystem getInit()
+    +ConceptLattice getLattice()
+    +Lattice getReducedLattice()
+    +DGraph getDependencyGraph()
+    +TreeSet<ComparableSet> getMinimalGenerators()
+    +IS getCanonicalDirectBasis()
+    +IS getCanonicalBasis()
+    +Context getTable()
+    .. Mutators ..
+    #void setInit(ClosureSystem init)
+    #void setLattice(ConceptLattice lattice)
+    #void setReducedLattice(Lattice reducedLattice)
+    #void setDependencyGraph(DGraph dependencyGraph)
+    #void setMinimalGenerators(TreeSet<ComparableSet> minimalGenerators)
+    #void setCanonicalDirectBasis(IS canonicalDirectBasis)
+    #void setCanonicalBasis(IS canonicalBasis)
+    #void setTable(Context table)
+}
+
